# beach-challenge-problem

./: .env.local.sample  .gitignore  CLAUDE.md  Makefile  README.md  blogpost.md  pyproject.toml
scripts/: evaluate_agent.py  generate_evaluation_dataset.py
src/beach_challenge_problem/: __init__.py  metrics.py
src/beach_challenge_problem/agents/: __init__.py  generic_agent.py  one_shoot_agent.py
src/beach_challenge_problem/baml_client/: async_client.py  inlinedbaml.py  parser.py  stream_types.py  sync_client.py  type_builder.py  type_map.py  types.py
src/beach_challenge_problem/baml_src/: clients.baml  solve_problem.baml
